--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/uniqid": "^5.3.2",
-    "supabase": "^1.68.6"
+    "supabase": "^1.68.6",
+    "encoding": "^0.1.13"
   }
 }
